--- a/package.json
+++ b/package.json
@@ -36,11 +36,13 @@
     "lucide-react": "^0.503.0",
     "motion": "^12.15.0",
     "next-themes": "^0.4.6",
+    "pdfjs-dist": "^5.3.31",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.56.1",
     "react-icons": "^5.5.0",
     "react-multi-carousel": "^2.8.6",
+    "react-pdf": "^10.0.1",
     "react-router-dom": "^7.5.1",
     "react-scroll": "^1.9.3",
     "react-slick": "^0.30.3",
